--- a/wrInpFile.yaml
+++ b/wrInpFile.yaml
@@ -1,6 +1,13 @@
 ---
 # Arguments
 
+junctions_shp : junctions
+reservoirs_shp : reservoirs
+tanks_shp : tanks
+pipes_shp : pipes
+pumps_shp : pumps
+valves_shp : valves
+
 project : test_db
 dma : None
 host : hostID
@@ -8,3 +15,6 @@ user : test_admin
 password : ****
 port : 5432
 schema : test
+dmalist :
+- None
+- Net1
